--- a/src/stories/config.scss
+++ b/src/stories/config.scss
@@ -1,2 +1,2 @@
 @use "~pyxis-scss/src/scss/config.scss" with ($fontPath: "~pyxis-scss/src/assets/fonts");
-@use "~pyxis-scss/src/scss/pyxis.scss";
+@forward "~pyxis-scss/src/scss/pyxis.scss";
