[PRIMA-12048]: [Pyxis Scss] Ridefinizione delle variabili delle foundations (#15)

--- a/packages/pyxis-react/src/stories/foundations/Elevation/Elevation.module.scss
+++ b/packages/pyxis-react/src/stories/foundations/Elevation/Elevation.module.scss
@@ -1,4 +1,4 @@
-@use "../pyxis";
+@use "stories/pyxis";
 
 // TODO: replace margin properties with spacing mixin once it's available in pyxis
 .item {
