--- a/packages/pyxis-scss/src/scss/foundations/radius.scss
+++ b/packages/pyxis-scss/src/scss/foundations/radius.scss
@@ -11,21 +11,25 @@
 /// @type Map
 /// @access private
 $_radius: (
-  xl: 25px,
+  2xl: 32px,
+  xl: 24px,
   l: 20px,
-  m: 15px,
-  s: 10px,
-  xs: 5px,
+  m: 16px,
+  s: 12px,
+  xs: 8px,
+  2xs: 4px,
 );
 
 /// Border radius map.  
 /// <em style="font-size:small;">This variable is private.</em>
 ///
-/// @prop {Number} xl [25px]
+/// @prop {Number} 2xl [32px]
+/// @prop {Number} xl [24px]
 /// @prop {Number} l [20px]
-/// @prop {Number} m [15px]
-/// @prop {Number} s [10px]
-/// @prop {Number} xs [5px]
+/// @prop {Number} m [16px]
+/// @prop {Number} s [12px]
+/// @prop {Number} xs [8px]
+/// @prop {Number} 2xs [4px]
 ///
 /// @type Map
 $_radiusMap: ();
@@ -55,7 +59,7 @@ $_edgesList: ();
 /// @throw {Error}
 /// @access private
 @function _radius($size) {
-  @return lib.rem(lib.getOrDie($_radius, $size));
+  @return lib.rem(lib.get($_radius, $size));
 }
 
 /// Includes border-radius by size and edge.
