[PRIMA-12048]: [Pyxis Scss] Implementazione del componente Button (#13)

--- a/packages/pyxis-scss/src/scss/pyxis.scss
+++ b/packages/pyxis-scss/src/scss/pyxis.scss
@@ -1,6 +1,7 @@
 /// Exposed methods and variables to be used in your SCSS source code.
 /// Check each module implementation to be aware of what is exposed.
 @forward "foundations";
+@forward "components";
 @forward "lib";
 
 /// Pyxis foundations
