--- a/packages/pyxis-react/src/stories/foundations/Elevation/Elevation.module.scss
+++ b/packages/pyxis-react/src/stories/foundations/Elevation/Elevation.module.scss
@@ -1,4 +1,4 @@
-@use "stories/pyxis";
+@use "src/stories/pyxis";
 
 // TODO: replace margin properties with spacing mixin once it's available in pyxis
 .item {
