[PRIMA-12125]: [Pyxis Storybook] Documentazione icona (#17)

--- a/packages/pyxis-react/src/stories/components/Button/Button.scss
+++ b/packages/pyxis-react/src/stories/components/Button/Button.scss
@@ -1,4 +1,4 @@
-@use "../../pyxis.scss";
+@use "src/stories/pyxis.scss";
 
 // TODO: delete when icon classes and button story are added.
 .wrapper {
